--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
 		<link rel="stylesheet" href="/_app/assets/start-61d1577b.css">
 		<link rel="stylesheet" href="/_app/assets/vendor-42482fb6.css">
-		<link rel="stylesheet" href="/_app/assets/pages/index.svelte-7ef13474.css">
-		<link rel="modulepreload" href="/_app/start-9f40247c.js">
-		<link rel="modulepreload" href="/_app/chunks/vendor-6c71ab00.js">
-		<link rel="modulepreload" href="/_app/layout.svelte-7dc3177d.js">
-		<link rel="modulepreload" href="/_app/pages/index.svelte-e5ebee2b.js">
+		<link rel="stylesheet" href="/_app/assets/pages/index.svelte-dd4a3ef2.css">
+		<link rel="modulepreload" href="/_app/start-81c0f0cf.js">
+		<link rel="modulepreload" href="/_app/chunks/vendor-34826e43.js">
+		<link rel="modulepreload" href="/_app/chunks/preload-helper-ec9aa979.js">
+		<link rel="modulepreload" href="/_app/pages/__layout.svelte-ddb38b0c.js">
+		<link rel="modulepreload" href="/_app/pages/index.svelte-7480186e.js">
 
 		<script type="module">
-			import { start } from "/_app/start-9f40247c.js";
+			import { start } from "/_app/start-81c0f0cf.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
@@ -31,8 +32,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/_app/layout.svelte-7dc3177d.js"),
-						import("/_app/pages/index.svelte-e5ebee2b.js")
+						import("/_app/pages/__layout.svelte-ddb38b0c.js"),
+						import("/_app/pages/index.svelte-7480186e.js")
 					],
 					url: new URL("http://prerender/"),
 					params: {}
@@ -45,13 +46,15 @@
   <div id="svelte">
 
 
+<div class="language-dropdown svelte-1j8smr0"><select id="language" class="form-select" arial-label="Language selection"><option value="en">English</option><option value="de">Deutsch</option></select></div>
+
 
 
 <ul class="_toastContainer svelte-7xr3c1"></ul>
 
 <div class="container"><div class="row align-items-center" style="min-height: 100vh"><div class="card mx-auto w-75 col"><div class="row no-gutters"><div class="col-md-7 d-flex flex-column"><div class="card-body"><h4 class="card-title">Eli Kogan-Wang // elikoga</h4>
-            <h5 class="card-subtitle">Ich baue Dinge. // I build things.</h5>
-            <div class="card-text mt-2"><p>I&#39;m currently a Student at the University of Paderborn studying Computer Science as a Bachelor.</p><p>I&#39;m working at the <a href="https://flyingcircus.io/">Flying Circus</a> doing mainly <a href="https://nixos.org/">Nix/NixOS</a> and some <a href="https://www.python.org/">Python</a> development right now.</p><p>Outside of work I do Frontend Development with <a href="https://svelte.dev/">Svelte</a> and backend development with <a href="https://nodejs.org/">Node.js</a>.</p><p>My Résumé is avaliable in <a href="https://cv.eliko.ga/cv/de">de</a> and <a href="https://cv.eliko.ga/cv/en">en</a>.</p></div></div>
+            <h5 class="card-subtitle">I build things, write code and solve problems.</h5>
+            <div class="card-text mt-2"><p>I&#39;m currently a Student at the University of Paderborn studying Computer Science as a Bachelor.</p><p>I&#39;m working at the <a href="https://flyingcircus.io/">Flying Circus</a> doing mainly <a href="https://nixos.org/">Nix/NixOS</a> and some <a href="https://www.python.org/">Python</a> development right now.</p><p>Outside of work I do Frontend Development with <a href="https://svelte.dev/">Svelte</a> and backend development with <a href="https://nodejs.org/">Node.js</a>.</p><p>My Résumé is avaliable in <a href="https://cv.eliko.ga/cv/de">German</a> and <a href="https://cv.eliko.ga/cv/en">English</a>.</p></div></div>
           <div class="card-body soc-list mr-auto svelte-1haj98"><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://github.com/elikoga" target="_blank"><i class="fab fa-github svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://gitlab.com/elikoga" target="_blank"><i class="fab fa-gitlab svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://twitter.com/elikoga" target="_blank"><i class="fab fa-twitter svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://instagram.com/elikoga" target="_blank"><i class="fab fa-instagram svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://reddit.com/u/elikoga" target="_blank"><i class="fab fa-reddit svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://t.me/coafin" target="_blank"><i class="fab fa-telegram svelte-740zog"></i></a><span class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" data-tooltip="Copies my Discord Tag to your Clipboard"><i class="fab fa-discord svelte-740zog"></i></span><span class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" data-tooltip="Copies my Email to your Clipboard"><i class="fas fa-envelope svelte-740zog"></i></span></div></div>
         <div class="col-md-5"><div class="card-body"><img class="img-fluid rounded-circle" alt="Picture of Eli Kogan-Wang" src="/PortraitSmall.jpg"></div></div></div></div></div>
 </div>
