deploy: 2109b96c23a9baa51694f9f8e4ec77d0789c05ad

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 		<link rel="stylesheet" href="/_app/assets/start-61d1577b.css">
 		<link rel="stylesheet" href="/_app/assets/vendor-42482fb6.css">
 		<link rel="stylesheet" href="/_app/assets/pages/index.svelte-dd4a3ef2.css">
-		<link rel="modulepreload" href="/_app/start-3cac6fcc.js">
+		<link rel="modulepreload" href="/_app/start-1f95ddff.js">
 		<link rel="modulepreload" href="/_app/chunks/vendor-34826e43.js">
 		<link rel="modulepreload" href="/_app/chunks/preload-helper-ec9aa979.js">
-		<link rel="modulepreload" href="/_app/pages/__layout.svelte-61b394e5.js">
+		<link rel="modulepreload" href="/_app/pages/__layout.svelte-2dfd5d61.js">
 		<link rel="modulepreload" href="/_app/pages/index.svelte-3a5916be.js">
 
 		<script type="module">
-			import { start } from "/_app/start-3cac6fcc.js";
+			import { start } from "/_app/start-1f95ddff.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":""},
@@ -32,7 +32,7 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/_app/pages/__layout.svelte-61b394e5.js"),
+						import("/_app/pages/__layout.svelte-2dfd5d61.js"),
 						import("/_app/pages/index.svelte-3a5916be.js")
 					],
 					url: new URL("http://prerender/"),
@@ -54,7 +54,7 @@
 
 <div class="container"><div class="row align-items-center" style="min-height: 100vh"><div class="card mx-auto w-75 col"><div class="row no-gutters"><div class="col-md-7 d-flex flex-column"><div class="card-body"><h4 class="card-title">Eli Kogan-Wang // elikoga</h4>
             <h5 class="card-subtitle">I build things, write code and solve problems.</h5>
-            <div class="card-text mt-2"><p>I&#39;m currently a student at the University of Paderborn studying Computer Science as a Bachelor.</p><p>I&#39;m working at the <a href="https://flyingcircus.io/">Flying Circus</a> doing mainly <a href="https://nixos.org/">Nix/NixOS</a> and some <a href="https://www.python.org/">Python</a> development right now.</p><p>Outside of work I do frontend development with <a href="https://svelte.dev/">Svelte</a> and backend development with <a href="https://www.rust-lang.org/">Rust</a> or <a href="https://nodejs.org/">Node.js</a>.</p><p>My Résumé is avaliable in <a href="https://cv.eliko.ga/cv/de">German</a> and <a href="https://cv.eliko.ga/cv/en">English</a>.</p></div></div>
+            <div class="card-text mt-2"><p>I&#39;m currently a student at the University of Paderborn studying Computer Science as a Bachelor.</p><p>I&#39;m working at the <a href="https://flyingcircus.io/">Flying Circus</a> doing mainly <a href="https://nixos.org/">Nix/NixOS</a> and some <a href="https://www.python.org/">Python</a> development right now.</p><p>Right now I&#39;m building <a href="https://thymis.io/">Thymis</a>, a device-management software for NixOS Devices.</p><p>My Résumé is avaliable in <a href="https://cv.eliko.ga/cv/de">German</a> and <a href="https://cv.eliko.ga/cv/en">English</a>.</p></div></div>
           <div class="card-body soc-list mr-auto svelte-1haj98"><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://github.com/elikoga" target="_blank"><i class="fab fa-github svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://gitlab.com/elikoga" target="_blank"><i class="fab fa-gitlab svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://twitter.com/elikoga" target="_blank"><i class="fab fa-twitter svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://instagram.com/elikoga" target="_blank"><i class="fab fa-instagram svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://reddit.com/u/elikoga" target="_blank"><i class="fab fa-reddit svelte-740zog"></i></a><a class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" href="https://t.me/coafin" target="_blank"><i class="fab fa-telegram svelte-740zog"></i></a><span class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" data-tooltip="Copies my Discord Tag to your Clipboard"><i class="fab fa-discord svelte-740zog"></i></span><span class="border m-1 border-dark rounded-circle soc-circ text-center align-middle bg-light svelte-740zog" data-tooltip="Copies my Email to your Clipboard"><i class="fas fa-envelope svelte-740zog"></i></span></div></div>
         <div class="col-md-5"><div class="card-body"><img class="img-fluid rounded-circle" alt="Picture of Eli Kogan-Wang" src="/PortraitSmall.jpg"></div></div></div></div></div>
 </div>
